# word-of-mouth

./: .gitignore  .pre-commit-config.yaml  Makefile  README.org  build.nix  mypy.ini  pyproject.toml  requirements.txt
doc/: crawling-a-subreddit.org
tests/: test_bandgenerator.py  test_pipelines.py
wordofmouth/: __main__.py  bandaid.py  crawler.py  database.py  datasets.py  gazetteer.py  pipelines.py
wordofmouth/cli/: bandaid.py  commands.py  wordofmouth.py
wordofmouth/dagster/: __init__.py  bandaid.py
wordofmouth/etl/: reddit.py  sparql.py
wordofmouth/nlg/: alphabet.py  models.py
wordofmouth/resources/: wordofmouth.xsd
