[tool.poetry]
name = "word-of-mouth"
version = "0.1.0"
description = "A social recommendation engine."
authors = ["Alex Patry <alex@nlpfu.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.2.0"
requests = "^2.23.0"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
