[tool.poetry]
name = "word-of-mouth"
version = "0.1.0"
description = "A social recommendation engine."
authors = ["Alex Patry <alex@nlpfu.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.2.0"
requests = "^2.23.0"
numpy = "^1.18.4"
dagster = "^0.7.15"
spacy = "^2.3.5"

[tool.poetry.dev-dependencies]
dagit = "^0.7.15"
mypy = "^0.770"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"